# inlinable-dyn-extension-traits

./: README.md  writeup.md
complete/: .gitattributes  .gitignore  Cargo.toml  godbolt.sh  run_all.sh  test_and_output_asm.sh
complete/asm_output/: advanced_fn.s  advanced_options.s  advanced_traits.s  basic_fn.s  basic_options.s  basic_traits.s  faulty_fn.s  faulty_options.s  faulty_traits.s
complete/godbolt_asm/: NOTES.md
complete/godbolt_asm/inline_always_impact/: arm_traits_advanced_inline_always.s  arm_traits_advanced_no_inline.s  x86_traits_advanced_inline_always.s  x86_traits_advanced_no_inline.s
complete/godbolt_asm/traits_vs_fn/: x86_fn_inline.s  x86_traits_inline.s
complete/src/: commands.rs  main.rs  print_macros.rs
complete/src/using_fn/: controller.rs  mod.rs  target.rs
complete/src/using_fn/targets/: advanced.rs  basic.rs  faulty.rs  mod.rs
complete/src/using_options/: controller.rs  mod.rs  opt_result.rs  target.rs
complete/src/using_options/targets/: advanced.rs  basic.rs  faulty.rs  mod.rs
complete/src/using_traits/: controller.rs  mod.rs  target.rs
complete/src/using_traits/targets/: advanced.rs  basic.rs  faulty.rs
